sửa lại trả về dữ liệu đầy đủ cho bookignDTO